--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="activity_sub1">Sub Activity 1</string>
     <string name="activity_sub2">Sub Activity 2</string>
 
+    <string name="activity_shortcutmanager_debug">ShortcutManager debug</string>
+
     <string name="shortcut_main2_uri_label">Github link</string>
     <string name="shortcut_main2_uri_link">https://github.com/rockgecko-development/NShortcutBugs</string>
 </resources>
