--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="activity_sub2">Sub Activity 2</string>
 
     <string name="activity_shortcutmanager_debug">ShortcutManager debug</string>
+    <string name="activity_preferences_debug">Preferences debug</string>
 
     <string name="shortcut_main2_uri_label">Github link</string>
     <string name="shortcut_main2_uri_link">https://github.com/rockgecko-development/NShortcutBugs</string>
+    <string name="shortcut_main2_chrome_package">com.android.chrome</string>
+    <string name="shortcut_main2_chrome_target_class">com.google.android.apps.chrome.Main</string>
 </resources>
