--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,11 @@
     <string name="app_name">NShortcutBugs</string>
 
     <string name="activity_main1">NShortcut 1</string>
-    <string name="activity_main2">NShortcut 2</string>
     <string name="activity_sub1">Sub Activity 1</string>
+    <string name="activity_enabled_bool">Enabled by boolean resource</string>
+    <string name="activity_disabled_bool">Disabled by boolean resource</string>
+
+    <string name="activity_main2">NShortcut 2</string>
     <string name="activity_sub2">Sub Activity 2</string>
 
     <string name="activity_shortcutmanager_debug">ShortcutManager debug</string>
